--- a/afs/media/css/report_templates.css
+++ b/afs/media/css/report_templates.css
@@ -421,7 +421,7 @@ i.toggle:hover {
     margin: 0px;
 }
 
-.afs-report-section .afs-report-subsection.production-part:last-child {
+.afs-report-section .afs-report-subsection.part:last-child {
     padding-bottom: 50px;
 }
 
