Adds substance scene, various changes for existence

--- a/afs/templates/views/components/reports/digital-resource.htm
+++ b/afs/templates/views/components/reports/digital-resource.htm
@@ -59,6 +59,27 @@
                     }
                 }"></div>
             </div>
+            <!-- Existence Tab -->
+            <div class="afs-report-page" data-bind="if: activeSection() === 'existence'">
+                <div data-bind="component: {
+                    name: 'views/components/reports/scenes/existence',
+                    params: {
+                        data: resource,
+                        cards: existenceCards,
+                    }
+                }"></div>
+            </div>
+            <!-- Substance Tab -->
+            <div class="afs-report-page" data-bind="if: activeSection() === 'substance'">
+                <div data-bind="component: {
+                    name: 'views/components/reports/scenes/substance',
+                    params: {
+                        data: resource,
+                        cards: substanceCards,
+                        additionalData: additionalData
+                    }
+                }"></div>
+            </div>
         </div>
     </div>
 
