Add documentation to textual-work, #649

--- a/afs/templates/views/components/reports/textual-work.htm
+++ b/afs/templates/views/components/reports/textual-work.htm
@@ -48,6 +48,17 @@
                     }
                 }"></div>
             </div>
+            <!-- documentation Tab -->
+            <div class="afs-report-page" data-bind="if: activeSection() === 'documentation'">
+                <div data-bind="component: {
+                    name: 'views/components/reports/scenes/documentation',
+                    params: {
+                        data: resource,
+                        cards: documentationCards,
+                        dataConfig: documentationDataConfig,
+                    }
+                }"></div>
+            </div>
         </div>
     </div>
 
