adds aboutness scene

--- a/afs/templates/views/components/reports/scenes/existence.htm
+++ b/afs/templates/views/components/reports/scenes/existence.htm
@@ -430,7 +430,7 @@
                         <!-- Event First Generation Cards -->
                         <div class="afs-report-subsection-firstchild">
                             <h5>Event Part Timespan</h5>
-                            <a data-bind="if: $data.cards && $data.cards.timespan, click: function(){$parent.addNewTile(eventCards.timespan)}" class="afs-report-a"><i class="fa fa-mail-reply"></i> {% trans "Edit Part Timespan" %}</a>
+                            <a data-bind="if: $data.cards && $data.cards.timespan, click: function(){$parent.addNewTile(cards.timespan)}" class="afs-report-a"><i class="fa fa-mail-reply"></i> {% trans "Edit Part Timespan" %}</a>
                             <!-- Show this block if there's NO data -->
                             <div class="afs-nodata-note">No timespan for this event</div>
     
