adds card control style

--- a/afs/media/css/report_templates.css
+++ b/afs/media/css/report_templates.css
@@ -453,6 +453,10 @@ i.toggle:hover {
     width: 300px;
 }
 
+.afs-card-control{
+    display: inline;
+}
+
 .afs-block-key.compressed {
     padding-top: 0px;
     margin: 0px;
