--- a/afs/templates/views/components/reports/physical-thing.htm
+++ b/afs/templates/views/components/reports/physical-thing.htm
@@ -102,69 +102,15 @@
 {% block summary %}
 
 <div class="model-summary-report">
-    <div>
-        <h2 class="summary-report-title">
-            <span data-bind="text: report.get('displayname') "></span>
-            <a class="summary-report-link" href="javascript(void);" data-bind="text: gallerySystemsTMSid"></a>
-        </h2>
-    </div>
-
-    <!-- Header -->
-    <div class="summary-report-subtitle">
-        <span>
-            <span class="subtitle-category">{% trans "Artist:" %}</span>
-            <span class="subtitle-value" data-bind="if: artists().length > 0">
-                <span data-bind="foreach: artists">
-                    <span data-bind="if: $index > 0">, </span>
-                    <a target="_blank" data-bind="text: name, attr: { href: link }"></a>
-                </span>
-            </span>
-            <span class="subtitle-value-blank" data-bind="if: artists().length === 0">
-                {% trans "No artist information" %}
-            </span>
-        </span>
-        <span style="float: right; font-size: 13px;">{% trans "Gallery Systems TMS id" %}</span>
-    </div>
-
-    <!-- Description -->
-    <div class="summary-report-description">
-        <span data-bind="if: description.length > 0">
-            <div data-bind="html: description"></div>
-        </span>
-        <span data-bind="if: description.length === 0">
-            {% trans "No description available" %}
-        </span>
-    </div>
-    
-    <!-- Manifests/Canvases -->
-    <div class="summary-report-manifests" data-bind="foreach: manifests">
-        <div style="margin-bottom: 15px;">
-            <div class="summary-report-manifest-title">
-                <span class="subtitle-category">{% trans "Related Images: " %}</span>
-                <span data-bind="text: label"></span>
-            </div>
-            
-            <div data-bind="foreach: sequences">
-                <div data-bind="foreach: canvases">
-                    <img class="summary-report-canvas" src="" data-bind="attr:{src: thumbnail, title: label}" />
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Related Activities -->
-    <div class="summary-report-related-panel">
-        <div class="summary-report-related">
-            {% trans "Included in the following Activites" %}
-        </div>
-        <div data-bind="if: activities().length > 0">
-            <div class="subtitle-value" data-bind="foreach: activities">
-                <a class="summary-report-related-list" target="_blank" data-bind="text: name, attr: { href: link }, click: function() { return true;}, clickBubble: false"></a>
-            </div>
-        </div>
-        <span data-bind="if: activities().length === 0">
-            {% trans "No associated activities" %}
-        </span>
+    <!-- Names -->
+    <div class="afs-report-page">
+        <div data-bind="component: {
+            name: 'views/components/reports/scenes/name',
+            params: {
+                data: resource,
+                cards: nameCards
+            }
+        }"></div>
     </div>
 </div>
 
