--- a/afs/templates/views/components/reports/scenes/name.htm
+++ b/afs/templates/views/components/reports/scenes/name.htm
@@ -168,3 +168,10 @@
 </div>
 {% endblock body %}
 {% endblock report %}
+{% block summary %}
+
+<div class="model-summary-report">
+Do not use - yet.
+</div>
+
+{% endblock summary %}
