--- a/afs/templates/views/components/reports/physical-thing.htm
+++ b/afs/templates/views/components/reports/physical-thing.htm
@@ -108,6 +108,24 @@
                        data: locationData
                    }
                }"></div>
+           </div>            
+           <!-- Parthood Tab -->
+           <div class="afs-report-page" data-bind="if: activeSection() === 'parthood'">
+               <div data-bind="component: {
+                   name: 'views/components/reports/scenes/default',
+                   params: {
+                       data: parthoodData,
+                   }
+               }"></div>
+           </div>
+           <!-- Sethood Tab -->
+           <div class="afs-report-page" data-bind="if: activeSection() === 'sethood'">
+               <div data-bind="component: {
+                   name: 'views/components/reports/scenes/default',
+                   params: {
+                       data: sethoodData,
+                   }
+               }"></div>
            </div>
         </div>
     </div>
