Change the name of the event, #651

--- a/afs/templates/views/components/reports/collection-set.htm
+++ b/afs/templates/views/components/reports/collection-set.htm
@@ -65,6 +65,7 @@
                     params: {
                         data: resource,
                         cards: existenceCards,
+                        events: existenceEvents,
                         dataConfig: existenceDataConfig,
                     }
                 }"></div>
