Add existence to group, #651

--- a/afs/templates/views/components/reports/group.htm
+++ b/afs/templates/views/components/reports/group.htm
@@ -58,6 +58,18 @@
                     }
                 }"></div>
             </div>
+            <!-- Existence Tab -->
+            <div class="afs-report-page" data-bind="if: activeSection() === 'existence'">
+                <div data-bind="component: {
+                    name: 'views/components/reports/scenes/existence',
+                    params: {
+                        data: resource,
+                        cards: existenceCards,
+                        events: existenceEvents,
+                        dataConfig: existenceDataConfig,
+                    }
+                }"></div>
+            </div>
         </div>
     </div>            
     {% endblock body %}
